--- a/NODE-APP/src/components/Footer.astro
+++ b/NODE-APP/src/components/Footer.astro
@@ -9,7 +9,7 @@ import linkedin from '@assets/linkedin-logo.webp';
 <footer class="bg-[#8a712b] dark:bg-[#8a712b] text-white py-12 px-12 md:px-24">
   <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
     <div class="flex-1 mb-4 md:mb-0">
-      <p class="text-sm">&copy; {new Date().getFullYear()} Chad J. Dupuis<br />Yin Yang House<br />Yin Yang House Chattanooga, LLC<br />All rights reserved.</p>
+      <p class="text-sm">&copy; {new Date().getFullYear()} Chad J. Dupuis<br />Yin Yang House<br />All rights reserved.</p>
       <p class="text-sm">Website Design and Management by the <a href="https://yyhmsg.net" class="text-white hover:text-gray-300">Yin Yang House Media Services Group</a></p>
     </div>
     <div class="flex-1 mb-4 md:mb-0">
