--- a/NODE-APP/src/pages/news-events/[page].astro
+++ b/NODE-APP/src/pages/news-events/[page].astro
@@ -46,16 +46,16 @@ const currentPage = Number(page || 1); // Ensure the current page is a number
 
 
 const pageData = {
-  title: currentPage === 1 ? "Yin Yang House Chattanooga News and Events" : `Yin Yang House Chattanooga News and Events - Page ${currentPage}`,
+  title: currentPage === 1 ? "Yin Yang House Twin Cities News and Events" : `Yin Yang House Twin Cities News and Events - Page ${currentPage}`,
   date: "",
   slug: currentPage === 1 ? "news-events" : `${currentPage}`,
   author: "",
   coverimage: "", 
   coveralt: "",
   parent: currentPage === 1 ? "" : `news-events`,
-  description: "News and events related to the acupuncture, massage and wellness services offered at Yin Yang House Chattanooga.",
+  description: "News and events related to the acupuncture and wellness services offered at Yin Yang House Twin Cities.",
   ogImage: "",
-  keywords: ["acupuncture news", "chattannoga wellness news", "chattanooga events", "massage therapy news"],
+  keywords: ["acupuncture news", "minneapolis wellness news", "minneapolis events", "st paul wellness news", "st paul events"],
   socialTitle: "",
   socialDescription: "",
   layout: "",
@@ -65,7 +65,7 @@ const pageData = {
 
 <Layout fullWidth={false} thisPage={pageData} isArticle={true} isProduct={false}>
     <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 space-y-6 bg-white dark:bg-gray-800 shadow-md rounded-lg p-6">
-        <h1 class="text-3xl font-bold">Chattanooga Center News and Events</h1>
+        <h1 class="text-3xl font-bold">Twin Cities Center News and Events</h1>
         <ul class="space-y-2">
             {paginatedItems.map(i => (
                 <li class="list-disc ml-5"> 
