--- a/NODE-APP/src/components/Scheduling.astro
+++ b/NODE-APP/src/components/Scheduling.astro
@@ -2,9 +2,10 @@
   <!--<div class="w-full sm:w-4/5 mx-auto bg-white dark:bg-gray-800 rounded-xl shadow overflow-hidden"> -->
   <div class="w-full sm:w-4/5 mx-auto bg-white dark:bg-gray-800 rounded-xl shadow">
     <div class="relative">
-      <iframe src="https://app.acuityscheduling.com/schedule.php?owner=11184580" title="Schedule Appointment" class="w-full aspect-video" frameborder="0"></iframe>
+      <!-- <iframe src="https://app.acuityscheduling.com/schedule.php?owner=" title="Schedule Appointment" class="w-full aspect-video" frameborder="0"></iframe> -->
     </div>
     <script defer src="https://embed.acuityscheduling.com/js/embed.js" type="text/javascript"></script>
+  <h3>We are still exploring locations.  Appointment Availability TBA.</h3>
   </div>
 </section>
 
