--- a/NODE-APP/src/layouts/Layout.astro
+++ b/NODE-APP/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import '@styles';
-import yyhLogo from '@assets/yyh-chatt-clinic-logo.webp';
+import yyhLogo from '@assets/yinyanghouse-clinic-mn-logo-300.webp';
 const { thisPage = {}, fullWidth = false, isArticle = false, isProduct = false } = Astro.props;
 const visibleBreadcrumb = isArticle || isProduct;
 // fullwidth is used for schedule page
@@ -26,26 +26,27 @@ const pageData = {
 
 // Define navigation items as a reusable constant
 const navItems = [
-    { href: '/#aboutus', label: 'About Us' },
+    { href: '/#aboutus', label: 'About' },
     { href: '/#services', label: 'Services' },
     { href: '/news-events/', label: 'News / Events' },
     { href: '/#contactus', label: 'Contact'},
 ];
 
 const navMobileItems = [
-    { href: '/#aboutus', label: 'About Us' },
+    { href: '/#aboutus', label: 'About' },
     { href: '/#services', label: 'Services' },
-    { href: '/appointments', label: 'Appointments' },
     { href: '/news-events/', label: 'News / Events' },
     { href: '/#contactus', label: 'Contact'},
 ];
 
+//    { href: '/appointments', label: 'Appointments' },
+
 // SEO Handling
-const siteUrl = Astro.site || 'https://chattanooga.yinyanghouse.com';
-const thisTitle = thisPage.title || 'Yin Yang House Chattanooga - Acupuncture, Massage and Wellness Center';
-const thisDescription = thisPage.description || 'Yin Yang House Chattanooga has been offering acupuncture, massage therapy and other wellness services in the Chattanooga area since 2006.';
+const siteUrl = Astro.site || 'https://tc.yinyanghouse.com';
+const thisTitle = thisPage.title || 'Yin Yang House Twin Cities - Acupuncture and Wellness Center';
+const thisDescription = thisPage.description || 'Yin Yang House Twin Cities has been offering acupuncture and related services since 1999 through it various clinics and educational outreaches.';
 const thisImage = thisPage.image || new URL('/images/yin-yang-house-default.jpg', siteUrl).toString();
-const thisKeywords = thisPage.keywords || 'acupuncture, massage, wellness, Chattanooga, yoga, herbal medicine, physical therapy, healing, holistic health, alternative medicine';
+const thisKeywords = thisPage.keywords || 'acupuncture, massage, wellness, twin cities, minneapolis, st paul, qigong, tai chi, meditation, herbal medicine, healing, holistic health, alternative medicine';
 const thisType = isArticle ? "Article" : (isProduct ? "Product" : "WebPage");
 
 
@@ -58,7 +59,7 @@ const breadcrumbData = {
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": "https://chattanooga.yinyanghouse.com/"
+      "item": "https://tc.yinyanghouse.com/"
     }
   ]
 };
@@ -68,7 +69,7 @@ if (thisPage.parent) {
     "@type": "ListItem",
     "position": 2,
     "name": thisPage.parent.replace('-', ' '),
-    "item": `https://chattanooga.yinyanghouse.com/${thisPage.parent}`
+    "item": `https://tc.yinyanghouse.com/${thisPage.parent}`
   });
 }
 
@@ -77,7 +78,7 @@ if (thisPage.slug) {
         "@type": "ListItem",
         "position": breadcrumbData.itemListElement.length + 1,
         "name": thisPage.title,
-        "item": `https://chattanooga.yinyanghouse.com/${thisPage.parent ?? `${thisPage.parent}/`}${thisPage.slug}`
+        "item": `https://tc.yinyanghouse.com/${thisPage.parent ?? `${thisPage.parent}/`}${thisPage.slug}`
     });
 }
 
@@ -94,7 +95,7 @@ const jsonLdFull = {
       "image": thisImage,
       "author": {
         "@type": "Person",
-        "name": thisPage.author || 'Yin Yang House Chattanooga',
+        "name": thisPage.author || 'Yin Yang House Twin Cities',
         "url": Astro.site + "#aboutus"
       },
       "datePublished": thisPage.date || "2025-04-24",
@@ -154,7 +155,7 @@ const jsonLdFull = {
         {isArticle && (
             <>
                 <meta property="article:published_time" content={thisPage.date} />
-                <meta property="article:author" content={thisPage.author || 'Yin Yang House Chattanooga'} />
+                <meta property="article:author" content={thisPage.author || 'Yin Yang House Twin Cities'} />
             </>
         )}
 
