--- a/NODE-APP/src/layouts/Layout.astro
+++ b/NODE-APP/src/layouts/Layout.astro
@@ -45,7 +45,7 @@ const navMobileItems = [
 const siteUrl = Astro.site || 'https://tc.yinyanghouse.com';
 const thisTitle = thisPage.title || 'Yin Yang House Twin Cities - Acupuncture and Wellness Center';
 const thisDescription = thisPage.description || 'Yin Yang House Twin Cities has been offering acupuncture and related services since 1999 through it various clinics and educational outreaches.';
-const thisImage = thisPage.image || new URL('/images/yin-yang-house-default.jpg', siteUrl).toString();
+const thisImage = thisPage.image || new URL('/images/yinyanghouse-clinic-mn-log-300.png', siteUrl).toString();
 const thisKeywords = thisPage.keywords || 'acupuncture, massage, wellness, twin cities, minneapolis, st paul, qigong, tai chi, meditation, herbal medicine, healing, holistic health, alternative medicine';
 const thisType = isArticle ? "Article" : (isProduct ? "Product" : "WebPage");
 
