--- a/NODE-APP/src/components/Contact.astro
+++ b/NODE-APP/src/components/Contact.astro
@@ -36,10 +36,10 @@ import yyhLogoSmall from '@assets/yinyanghouse-clinic-mn-logo-300.webp';
             <br>
             Email:
             <a
-              href="mailto:tc@yinyanghouse.com"
+              href="mailto:tc@yyhmsg.net"
               class="hover:underline text-[#5cc4b5] dark:text-[#9fcf67]"
             >
-              tc@yinyanghouse.com
+              tc@yyhmsg.net
             </a>
             <br>
             Map / Directions:
