typos and updates

--- a/NODE-APP/src/components/About.astro
+++ b/NODE-APP/src/components/About.astro
@@ -33,7 +33,7 @@ import chadimg from '@assets/chad-dupuis-acupuncturist-yinyanghouse-twin-cities-
       <div class="w-full">
         <p class="m-0">Chad has over 20 years of experience in treating a broad range of conditions, particularly those deemed "difficult to treat".  Voted "best of the best" acupuncturist many years in a row at the clinic he founded in <a href="https://yyhchattanooga.com/">Chattanooga</a> before returning to the midwest.</p>
         <br />
-        <p class="m-0">He utilizes a range of techniques tailored to each individual patient but draws heavily from the founder of Tong Ren Therapy, Master Tom Tam, whom he has studied with, worked with, and continued to learn from for nearly 30 years.</p>
+        <p class="m-0">He utilizes a range of techniques tailored to each individual patient but draws heavily from the founder of Tong Ren Therapy, Master Tom Tam, whom he has studied with, worked with, and continues to learn from for nearly 30 years.</p>
         <br />
         <p class="m-0">He is a perpetual student and prolific writer and explorer who shares his knowledge freely through the <a href="https://yinyanghouse.com/">Yin Yang House</a> website.  His site has helped teachers, practitioners, and the general public alike explore the foundations and workings of Chinese Medicine and associated systems.</p>
       </div>
