--- a/NODE-APP/src/components/Services.astro
+++ b/NODE-APP/src/components/Services.astro
@@ -10,7 +10,7 @@ const services = [
 },
 {
     title: 'Qigong and Tai Chi Classes',
-    description: `<p>We offer a range of qigong and Yang style Tai Chi courses to help you to gain tools and awareness to improve your own health and grow along a more sustainable path.</p>`
+    description: `<p>We offer a range of qigong and Yang style Tai Chi courses to help you gain tools and awareness to improve your own health and grow along a more sustainable path.</p>`
 },
 { 
     title: 'Chinese Herbal Medicine / Dietary Consultations',
