--- a/NODE-APP/src/pages/index.astro
+++ b/NODE-APP/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from '@layouts/Layout.astro';
 import Hero from "@components/Hero.astro";
 import About from "@components/About.astro";
 import Services from "@components/Services.astro";
+import Fee from "@components/Fee.astro";
 import Contact from "@components/Contact.astro";
 import Footer from "@components/Footer.astro";
 const pageData = {
@@ -28,6 +29,7 @@ const pageData = {
 	<div class="container mx-auto px-4 sm:px-6 lg:px-8">
 		<About />
 		<Services />
+		<Fee />
 		<Contact />
 		<Footer />
 	</div>
