--- a/NODE-APP/src/components/Contact.astro
+++ b/NODE-APP/src/components/Contact.astro
@@ -25,14 +25,14 @@ import yyhLogoSmall from '@assets/yinyanghouse-clinic-mn-logo-300.webp';
         <div class="flex-1">
           <p class="text-xl font-bold text-gray-900 dark:text-white">Yin Yang House</p>
           <p class="text-sm text-gray-700 dark:text-gray-300">Twin Cities - Location TBA</p>
-          <!-- <p class="text-sm">
+          <p class="text-sm">
             Phone:
             <a
               href="tel:"
               class="hover:underline text-[#5cc4b5] dark:text-[#9fcf67]"
             >
-              
-            </a> -->
+            (507) 200-8361  
+            </a>
             <br>
             Email:
             <a
